// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button simple text 1`] = `
<button
  className="jsx-1739046535 Button false"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button urgent text prefix 1`] = `
<button
  className="jsx-1739046535 Button urgent"
  onClick={[Function]}
>
  !Cancel
</button>
`;

exports[`Storyshots Button urgent text sufix 1`] = `
<button
  className="jsx-1739046535 Button urgent"
  onClick={[Function]}
>
  Cancel!
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="jsx-1739046535 Button false"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;
